--- a/Testing FBFUSE beamformer.ipynb
+++ b/Testing FBFUSE beamformer.ipynb
@@ -2,45 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "id": "coral-valuation",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/cherryng/Work-Local/SETI/Softwares\n",
-      "/usr/bin\n",
-      "/Users/cherryng/Work-Local/SETI/Softwares/Mosaic/mosaic\n",
-      "/Users/cherryng/Work-Local/SETI/Softwares/katpoint/katpoint\n",
-      "/Users/cherryng/miniconda3/envs/cherry-dev/lib/python39.zip\n",
-      "/Users/cherryng/miniconda3/envs/cherry-dev/lib/python3.9\n",
-      "/Users/cherryng/miniconda3/envs/cherry-dev/lib/python3.9/lib-dynload\n",
-      "\n",
-      "/Users/cherryng/miniconda3/envs/cherry-dev/lib/python3.9/site-packages\n",
-      "/Users/cherryng/miniconda3/envs/cherry-dev/lib/python3.9/site-packages/IPython/extensions\n",
-      "/Users/cherryng/.ipython\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from katpoint import katpoint\n",
     "import coordinate as coord\n",
     "import sys\n",
     "\n",
     "\n",
-    "for p in sys.path:\n",
-    "    print(p)"
+    "#for p in sys.path:\n",
+    "#    print(p)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "identified-federation",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -173,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "extra-istanbul",
+   "id": "explicit-warehouse",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "alone-possibility",
+   "id": "peripheral-packet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,10 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "corresponding-hygiene",
+   "execution_count": 72,
+   "id": "tender-wells",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<coordinate.Antenna object at 0x1a311d310>\n"
+     ]
+    }
+   ],
    "source": [
     "#Reference antenna\n",
     "from coordinate import Antenna\n",
@@ -242,48 +224,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "convertible-plant",
+   "execution_count": 100,
+   "id": "stopped-programming",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m000,   -30:42:39.8,   21:26:38.0,   1035.0,   13.5,   -8.254 -207.2925 1.209 5875.794 5877.025,   -0:00:39.7 0 -0:04:04.4 -0:04:53.0 0:00:57.8 -0:00:13.9 0:13:45.2 0:00:59.8,   1.22\n"
+     ]
+    }
+   ],
    "source": [
     "#Load in antennas \n",
+    "\"\"\"\n",
+    "    Need a list of antenna objects or coordinate in csv format\n",
+    "    katpoint.Antenna class says that the format for a fully-specified antenna should be: \n",
+    "    'FF2, -30:43:17.3, 21:24:38.5, 1038.0, 12.0, 86.2 25.5 0.0, -0:06:39.6 0 0 0 0 0 0:09:48.9, 1.16'\n",
+    "\n",
+    "\"\"\"\n",
     "import csv\n",
-    "ants = []\n",
+    "ants=[]\n",
     "with open('antenna.csv', newline='') as csvfile:\n",
     "    data = csv.reader(csvfile, delimiter=',')\n",
     "    for row in data:\n",
-    "        ants.append(row)\n"
+    "         ants.append(', '.join(row))\n",
+    "\n",
+    "print(ants[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
+   "id": "korean-internet",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "id": "settled-creator",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = DelayPolynomial(ants, defaultBoreSight, targets, arrayReferece)\n"
+    "test = DelayPolynomial(ants, defaultBoreSight, targets,arrayReferece)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "south-programmer",
+   "execution_count": 95,
+   "id": "scheduled-maryland",
    "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'ref_position_wgs84'",
+     "evalue": "'str' object has no attribute 'ref_position_wgs84'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-5f9d24e67a60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#provide a random time for now\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1203124953\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_delay_polynomials\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m--------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-5f9d24e67a60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#provide a random time for now\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1203124953\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_delay_polynomials\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m<ipython-input-31-eb234f940274>\u001b[0m in \u001b[0;36mget_delay_polynomials\u001b[0;34m(self, epoch, duration)\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mtarget_array\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtargets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m             dc = katpoint.DelayCorrection(self.antennas,\n\u001b[0m\u001b[1;32m    100\u001b[0m                     self.reference, self.frequency)\n\u001b[1;32m    101\u001b[0m             \u001b[0mdelay\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mphase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrections\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimestamp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Work-Local/SETI/Softwares/katpoint/katpoint/delay.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ants, ref_ant, sky_centre_freq, extra_delay)\u001b[0m\n\u001b[1;32m    166\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No reference antenna provided'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m             \u001b[0;31m# Tolerances translate to micrometre differences (assume float64)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m             if any([not np.allclose(ant.ref_position_wgs84,\n\u001b[0m\u001b[1;32m    169\u001b[0m                                     ref_ant.position_wgs84, rtol=0., atol=1e-14)\n\u001b[1;32m    170\u001b[0m                     for ant in list(ants) + [ref_ant]]):\n",
       "\u001b[0;32m~/Work-Local/SETI/Softwares/katpoint/katpoint/delay.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    166\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No reference antenna provided'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m             \u001b[0;31m# Tolerances translate to micrometre differences (assume float64)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m             if any([not np.allclose(ant.ref_position_wgs84,\n\u001b[0m\u001b[1;32m    169\u001b[0m                                     ref_ant.position_wgs84, rtol=0., atol=1e-14)\n\u001b[1;32m    170\u001b[0m                     for ant in list(ants) + [ref_ant]]):\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'ref_position_wgs84'"
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'ref_position_wgs84'"
      ]
     }
    ],
