--- a/Testing FBFUSE beamformer.ipynb
+++ b/Testing FBFUSE beamformer.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "id": "coral-valuation",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from importlib import reload  \n",
     "from katpoint import katpoint\n",
+    "katpoint = reload(katpoint)\n",
     "import coordinate as coord\n",
     "import sys\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "#for p in sys.path:\n",
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "spoken-symposium",
    "metadata": {},
    "outputs": [],
@@ -45,6 +48,7 @@
     "        self.frequency = 1.4e9\n",
     "        self.reference = reference\n",
     "        self.bore_sight = DelayPolynomial.check_targets([bore_sight,])[0]\n",
+    "        \n",
     "\n",
     "    @staticmethod\n",
     "    def check_targets(targets):\n",
@@ -126,14 +130,10 @@
     "            delay, phase = dc.corrections(target, timestamp)\n",
     "            delayArray = np.array(dict_to_antenna_ordered_list(\n",
     "                        delay, self.antennas))\n",
-    "            \"\"\"\n",
-    "            [:, 0, :]: only take first rate output\n",
-    "            \"\"\"\n",
+    "\n",
     "            target_array.append(delayArray[:,0,:])\n",
     "        target_array = np.array(target_array)\n",
-    "        \"\"\"\n",
-    "        subtract the boresight beam form the offset beams\n",
-    "        \"\"\"\n",
+    "\n",
     "        dc = katpoint.DelayCorrection(self.antennas,\n",
     "            self.reference, self.frequency)\n",
     "        delay, phase = dc.corrections(self.bore_sight, timestamp)\n",
@@ -141,13 +141,21 @@
     "                    delay, self.antennas))[:,0,:]\n",
     "\n",
     "        target_array = target_array - bore_sight_delay\n",
-    "        return target_array"
+    "        return target_array\n",
+    "\n",
+    "def dict_to_antenna_ordered_list(dict_obj, antennas, pol='h'):\n",
+    "    ordered_list = []\n",
+    "    for antenna in antennas:\n",
+    "        antenna_key = \"{}{}\".format(antenna.name, pol)\n",
+    "        ordered_list.append(dict_obj[antenna_key])\n",
+    "\n",
+    "    return ordered_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "explicit-warehouse",
+   "execution_count": 34,
+   "id": "local-sharp",
    "metadata": {},
    "outputs": [
     {
@@ -161,11 +169,11 @@
     {
      "data": {
       "text/plain": [
-       "[<katpoint.Target 'Ra: 1:02:03.00 Dec: 4:05:06.0' body=radec at 0x1a3291e50>,\n",
-       " <katpoint.Target 'Ra: 7:08:09.00 Dec: -4:05:06.0' body=radec at 0x1a3291b20>]"
+       "[<katpoint.Target 'Ra: 1:02:03.00 Dec: 4:05:06.0' body=radec at 0x109d655e0>,\n",
+       " <katpoint.Target 'Ra: 7:08:09.00 Dec: -4:05:06.0' body=radec at 0x109d65820>]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,6 +181,12 @@
    "source": [
     "#A list of targets to observe\n",
     "targets = []\n",
+    "\n",
+    "ha=\":\".join(['1','25','46.5336'])\n",
+    "dec=\":\".join(['-30','42','39.815999'])\n",
+    "target_string=\",\".join(['radec',ha,dec])\n",
+    "targets.append(katpoint.Target(target_string))\n",
+    "\n",
     "ha=\":\".join(['1','2','3'])\n",
     "dec=\":\".join(['4','5','6'])\n",
     "target_string=\",\".join(['radec',ha,dec])\n",
@@ -190,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "peripheral-packet",
+   "execution_count": 35,
+   "id": "express-sight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,40 +213,44 @@
     "ha=\":\".join(['1','25','46.5336'])\n",
     "dec=\":\".join(['-30','42','39.815999'])\n",
     "target_string=\",\".join(['radec',ha,dec])\n",
-    "defaultBoreSight=katpoint.Target(target_string)\n"
+    "defaultBoreSight=katpoint.Target(target_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "tender-wells",
+   "execution_count": 43,
+   "id": "blind-warren",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<coordinate.Antenna object at 0x1a311d310>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(-0.5360090362073407, 0.3742664655429396, 1035.0)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Reference antenna\n",
     "from coordinate import Antenna\n",
-    "arrayReferece = Antenna('ref', [-30.71106, 21.44389, 1035])"
+    "arrayRef = katpoint.Antenna('ref, -30:42:39.8, 21:26:38.0, 1035.0')\n",
+    "arrayRef.position_wgs84"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "stopped-programming",
+   "execution_count": 44,
+   "id": "aerial-vessel",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m000,   -30:42:39.8,   21:26:38.0,   1035.0,   13.5,   -8.254 -207.2925 1.209 5875.794 5877.025,   -0:00:39.7 0 -0:04:04.4 -0:04:53.0 0:00:57.8 -0:00:13.9 0:13:45.2 0:00:59.8,   1.22\n"
+      "m000: 13-m dish at ENU offset [  -8.254  -207.2925    1.209 ] m from lat -30:42:39.8, long 21:26:38.0, alt 1035.0 m\n"
      ]
     }
    ],
@@ -249,63 +267,61 @@
     "with open('antenna.csv', newline='') as csvfile:\n",
     "    data = csv.reader(csvfile, delimiter=',')\n",
     "    for row in data:\n",
-    "         ants.append(', '.join(row))\n",
+    "         ants.append(katpoint.Antenna(', '.join(row)))\n",
     "\n",
     "print(ants[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "korean-internet",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "settled-creator",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = DelayPolynomial(ants, defaultBoreSight, targets,arrayReferece)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "scheduled-maryland",
+   "execution_count": 45,
+   "id": "painted-gallery",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'ref_position_wgs84'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-95-5f9d24e67a60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#provide a random time for now\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1203124953\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_delay_polynomials\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-31-eb234f940274>\u001b[0m in \u001b[0;36mget_delay_polynomials\u001b[0;34m(self, epoch, duration)\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mtarget_array\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtargets\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m             dc = katpoint.DelayCorrection(self.antennas,\n\u001b[0m\u001b[1;32m    100\u001b[0m                     self.reference, self.frequency)\n\u001b[1;32m    101\u001b[0m             \u001b[0mdelay\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mphase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrections\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimestamp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Work-Local/SETI/Softwares/katpoint/katpoint/delay.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ants, ref_ant, sky_centre_freq, extra_delay)\u001b[0m\n\u001b[1;32m    166\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No reference antenna provided'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m             \u001b[0;31m# Tolerances translate to micrometre differences (assume float64)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m             if any([not np.allclose(ant.ref_position_wgs84,\n\u001b[0m\u001b[1;32m    169\u001b[0m                                     ref_ant.position_wgs84, rtol=0., atol=1e-14)\n\u001b[1;32m    170\u001b[0m                     for ant in list(ants) + [ref_ant]]):\n",
-      "\u001b[0;32m~/Work-Local/SETI/Softwares/katpoint/katpoint/delay.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    166\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No reference antenna provided'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m             \u001b[0;31m# Tolerances translate to micrometre differences (assume float64)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m             if any([not np.allclose(ant.ref_position_wgs84,\n\u001b[0m\u001b[1;32m    169\u001b[0m                                     ref_ant.position_wgs84, rtol=0., atol=1e-14)\n\u001b[1;32m    170\u001b[0m                     for ant in list(ants) + [ref_ant]]):\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'ref_position_wgs84'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in delay, ants is a sequence of antennas\n",
+      "ref: 0-m dish at lat -30:42:39.8, long 21:26:38.0, alt 1035.0 m\n",
+      "(-0.5360090362073407, 0.3742664655429396, 1035.0)\n",
+      "in delay, ants is a sequence of antennas\n",
+      "ref: 0-m dish at lat -30:42:39.8, long 21:26:38.0, alt 1035.0 m\n",
+      "(-0.5360090362073407, 0.3742664655429396, 1035.0)\n",
+      "in delay, ants is a sequence of antennas\n",
+      "ref: 0-m dish at lat -30:42:39.8, long 21:26:38.0, alt 1035.0 m\n",
+      "(-0.5360090362073407, 0.3742664655429396, 1035.0)\n"
      ]
     }
    ],
    "source": [
     "#provide a random time for now\n",
+    "test = DelayPolynomial(ants, defaultBoreSight, targets,arrayRef)\n",
     "time = 1203124953\n",
-    "test.get_delay_polynomials(time)"
+    "output = test.get_delay_polynomials(time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "bigger-antigua",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 64, 2)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#beam, antenna, (delay, rate)\n",
+    "output.shape"
+   ]
   }
  ],
  "metadata": {
